--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
+    "@mui/x-data-grid": "^7.20.0",
     "@tanstack/react-query": "^5.59.8",
     "axios": "^1.7.7",
     "next": "14.2.15",
